--- a/Source Web Design/product-page.html
+++ b/Source Web Design/product-page.html
@@ -225,25 +225,11 @@
             </div>
         </div>
     </div>
-    <!-- Home Slider -->
-    <div class="slider-area-1 top-header-space-1  pb-10">
-        <div id="mainSlider-1" class="nivoSlider slider-image">
-            <a href="#">
-                <img src="img/slider/1.jpg" alt="main slider"/>
-            </a>
-            <a href="#">
-                <img src="img/slider/2.jpg" alt="main slider"/>
-            </a>
-            <a href="#">
-                <img src="img/slider/3.jpg" alt="main slider"/>
-            </a>
-        </div>
-    </div>
     <!-- Shipping Area -->
     <div class="shipping-area  pb-20">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12" style="background: beige;">
+                <div class="col-xs-12" style="background: beige; margin-top: 100px;">
                     <div class="shipping-wrapper-1">
                         <!-- Single Shipping -->
                         <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
@@ -300,6 +286,7 @@
     <!-- Shop Page -->
     <div class="page-area pb-20 pt-20">
         <div class="container">
+            <h4>SẢN PHẨM CỔ</h4>
             <div class="row">
                 <!-- Shop Top Bar -->
                 <div class="shop-top-bar text-center mb-50 col-xs-12">
