--- a/Source Web Design/auction-page.html
+++ b/Source Web Design/auction-page.html
@@ -47,155 +47,51 @@
 <div class="wrapper bg-white fix">
 
 <!-- Header 1-->
-<div class="header-area sticky header-area-1  clearfix">
-    <!-- Header Left 1 -->
-    <div class="header-left header-left-1 float-left">
-        <a href="index.html" class="logo">
-            <img src="img/logo.png" alt="logo" />
-        </a>
-    </div>
-    <!-- Menu Wrapper 1 -->
-    <div class="menu-wrapper menu-wrapper-1 hidden-sm hidden-xs text-center">
-        <div class="menu menu-1">
-            <nav>
-                <ul>
-                    <li class="active">
-                        <a href="index.html">TRANG CHỦ</a>
-                    </li>
-                    <li>
-                        <a href="shop.html">LOẠI</a>
-                        <div class="mega-menu">
-                            <ul>
-                                <li>
-                                    <a href="#">CÁC LOẠI</a>
-                                </li>
-                                <li>
-                                    <a href="#">Xe cộ</a>
-                                </li>
-                                <li>
-                                    <a href="#">Đồ nội thất</a>
-                                </li>
-                                <li>
-                                    <a href="#">Đồ điện tử</a>
-                                </li>
-                                <li>
-                                    <a href="#">Thời trang</a>
-                                </li>
-                                <li>
-                                    <a href="#">Giày</a>
-                                </li>
-                                <li>
-                                    <a href="#">Đồ cổ</a>
-                                </li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <a href="#">TÌM THEO</a>
-                                </li>
-                                <li>
-                                    <a href="#">Tên</a>
-                                </li>
-                                <li>
-                                    <a href="#">Thời gian</a>
-                                </li>
-                            </ul>
-                            <div class="menu-banner">
-                                <a href="#">
-                                    <img src="img/menu-banner.jpg" alt="" />
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="blog.html">Tình trạng</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="blog.html">Đang đấu giá</a>
-                            </li>
-                            <li>
-                                <a href="blog-details.html">Đã lên sàng</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="blog.html">Chính sách</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="blog.html">Chính sách đấu giá</a>
-                            </li>
-                            <li>
-                                <a href="blog-details.html">Chính sách giao hàng</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">Liên hệ</a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="header-area sticky header-area-1  clearfix">
+        <!-- Header Left 1 -->
+        <div class="header-left header-left-1 float-left">
+            <a href="index.html" class="logo">
+                <img src="img/logo.png" alt="logo" />
+            </a>
         </div>
-    </div>
-    <!-- Header Right 1 -->
-    <div class="header-right header-right-1 float-right">
-        <!-- Account Menu -->
-        <div class="account-menu account-menu-1 float-right">
-            <button data-toggle="dropdown" class="acc-menu-toggle"><i class="zmdi zmdi-settings"></i></button>
-            <ul class="acc-menu-dropdown dropdown-menu right">
-                <li>
-                    <a href="#">Thông tin cá nhân</a>
-                </li>
-                <li>
-                    <a href="#">Lịch sử đấu giá</a>
-                </li>
-                <li>
-                    <a href="#">Xem chi tiết hoá đơn</a>
-                </li>
-                <li>
-                    <a href="#">Đăng xuất</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <!-- Mobile Menu Wrapper 1 -->
-    <div class="mobile-menu-wrapper mobile-menu-wrapper-1 hidden-md hidden-lg">
-        <div class="mobile-menu mobile-menu-1">
-            <nav>
-                <ul>
-                    <li class="active">
-                        <a href="index.html">TRANG CHỦ</a>
-                    </li>
-                    <li>
-                        <a href="shop.html">LOẠI</a>
-                        <ul>
-                            <li>
-                                <a href="#">CÁC LOẠI</a>
+        <!-- Menu Wrapper 1 -->
+        <div class="menu-wrapper menu-wrapper-1 hidden-sm hidden-xs text-center">
+            <div class="menu menu-1">
+                <nav>
+                    <ul>
+                        <li class="active">
+                            <a href="index.html">TRANG CHỦ</a>
+                        </li>
+                        <li>
+                            <a>LOẠI</a>
+                            <div class="mega-menu">
                                 <ul>
                                     <li>
-                                        <a href="#">CÁC LOẠI</a>
+                                        <a href="product-page.html">CÁC LOẠI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Xe cộ</a>
+                                        <a href="product-page.html">Xe cộ</a>
                                     </li>
                                     <li>
-                                        <a href="#">Đồ nội thất</a>
+                                        <a href="product-page.html">Đồ nội thất</a>
                                     </li>
                                     <li>
-                                        <a href="#">Đồ điện tử</a>
+                                        <a href="product-page.html">Đồ điện tử</a>
                                     </li>
                                     <li>
-                                        <a href="#">Thời trang</a>
+                                        <a href="product-page.html">Thời trang</a>
                                     </li>
                                     <li>
-                                        <a href="#">Giày</a>
+                                        <a href="product-page.html">Giày</a>
                                     </li>
                                     <li>
-                                        <a href="#">Đồ cổ</a>
+                                        <a href="product-page.html">Đồ cổ</a>
                                     </li>
                                 </ul>
-                            </li>
-                            <li>
-                                <a href="#">Tìm theo</a>
                                 <ul>
+                                    <li>
+                                        <a href="#">TÌM THEO</a>
+                                    </li>
                                     <li>
                                         <a href="#">Tên</a>
                                     </li>
@@ -203,28 +99,132 @@
                                         <a href="#">Thời gian</a>
                                     </li>
                                 </ul>
-                            </li>
-                        </ul>
+                                <div class="menu-banner">
+                                    <a href="#">
+                                        <img src="img/menu-banner.jpg" alt="" />
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a>Tình trạng</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="product-page.html">Đang đấu giá</a>
+                                </li>
+                                <li>
+                                    <a href="product-page.html">Đã lên sàng</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a>Chính sách</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="#">Chính sách đấu giá</a>
+                                </li>
+                                <li>
+                                    <a href="#">Chính sách giao hàng</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="contact.html">Liên hệ</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- Header Right 1 -->
+        <div class="header-right header-right-1 float-right">
+            <!-- Account Menu -->
+            <div class="account-menu account-menu-1 float-right">
+                <button data-toggle="dropdown" class="acc-menu-toggle"><i class="zmdi zmdi-settings"></i></button>
+                <ul class="acc-menu-dropdown dropdown-menu right">
+                    <li>
+                        <a href="#">Thông tin cá nhân</a>
                     </li>
                     <li>
-                        <a>Chính sách</a>
-                        <ul>
-                            <li>
-                                <a href="checkout.html">Chính sách đấu giá</a>
-                            </li>
-                            <li>
-                                <a href="wishlist.html">Chính sách giao hàng</a>
-                            </li>
-                        </ul>
+                        <a href="#">Lịch sử đấu giá</a>
                     </li>
                     <li>
-                        <a href="contact.html">Liện hệ</a>
+                        <a href="#">Xem chi tiết hoá đơn</a>
+                    </li>
+                    <li>
+                        <a href="#">Đăng xuất</a>
                     </li>
                 </ul>
-            </nav>
+            </div>
+        </div>
+        <!-- Mobile Menu Wrapper 1 -->
+        <div class="mobile-menu-wrapper mobile-menu-wrapper-1 hidden-md hidden-lg">
+            <div class="mobile-menu mobile-menu-1">
+                <nav>
+                    <ul>
+                        <li class="active">
+                            <a href="index.html">TRANG CHỦ</a>
+                        </li>
+                        <li>
+                            <a>LOẠI</a>
+                            <ul>
+                                <li>
+                                    <a href="product-page.html">CÁC LOẠI</a>
+                                    <ul>
+                                        <li>
+                                            <a href="product-page.html">CÁC LOẠI</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Xe cộ</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Đồ nội thất</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Đồ điện tử</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Thời trang</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Giày</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Đồ cổ</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a>Tìm theo</a>
+                                    <ul>
+                                        <li>
+                                            <a href="product-page.html">Tên</a>
+                                        </li>
+                                        <li>
+                                            <a href="product-page.html">Thời gian</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a>Chính sách</a>
+                            <ul>
+                                <li>
+                                    <a href="#">Chính sách đấu giá</a>
+                                </li>
+                                <li>
+                                    <a href="#">Chính sách giao hàng</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="contact.html">Liện hệ</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </div>
-</div>
 <!-- Home Slider -->
 <div class="single-product-area pb-90 pt-90">
     <div class="container">
@@ -255,8 +255,8 @@
                         </div>
                         <div class="single-product-price-ratting fix">
                             <p style="margin: 0px; font-style: italic; margin-top: 10px;">User đang giữ giá cao nhất:</p>
-                            <h3 class="single-pro-price float-left">
-                                <p style="font-weight: bold; font-size: 14px;">bingii98</p>
+                            <h3 class="single-pro-price float-left" style="color: #ff9900;">
+                                <span><i class="zmdi zmdi-star" style="font-size: 20px;">&nbsp</i></span><span><p style="font-weight: bold; font-size: 14px;">bingii98</p></span>
                             </h3>
                         </div>
                         <p>Node.js là một hệ thống phần mềm được thiết kế để viết các ứng dụng internet có khả năng mở rộng, đặc biệt là máy chủ web.[1] Chương trình được viết bằng JavaScript, sử dụng kỹ thuật điều khiển theo sự kiện, nhập/xuất không đồng bộ để tối tiểu tổng chi phí và tối đại khả năng mở rộng.[2] Node.js bao gồm có V8 JavaScript engine của Google, libUV, và vài thư viện khác. Node.js được tạo bởi Ryan Dahl từ năm 2009, và phát triển dưới sự bảo trợ của Joyent.</p>
