--- a/Source Web Design/product-page.html
+++ b/Source Web Design/product-page.html
@@ -63,29 +63,29 @@
                             <a href="index.html">TRANG CHỦ</a>
                         </li>
                         <li>
-                            <a href="shop.html">LOẠI</a>
+                            <a>LOẠI</a>
                             <div class="mega-menu">
                                 <ul>
                                     <li>
-                                        <a href="#">CÁC LOẠI</a>
+                                        <a href="product-page.html">CÁC LOẠI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Xe cộ</a>
+                                        <a href="product-page.html">Xe cộ</a>
                                     </li>
                                     <li>
-                                        <a href="#">Đồ nội thất</a>
+                                        <a href="product-page.html">Đồ nội thất</a>
                                     </li>
                                     <li>
-                                        <a href="#">Đồ điện tử</a>
+                                        <a href="product-page.html">Đồ điện tử</a>
                                     </li>
                                     <li>
-                                        <a href="#">Thời trang</a>
+                                        <a href="product-page.html">Thời trang</a>
                                     </li>
                                     <li>
-                                        <a href="#">Giày</a>
+                                        <a href="product-page.html">Giày</a>
                                     </li>
                                     <li>
-                                        <a href="#">Đồ cổ</a>
+                                        <a href="product-page.html">Đồ cổ</a>
                                     </li>
                                 </ul>
                                 <ul>
@@ -107,24 +107,24 @@
                             </div>
                         </li>
                         <li>
-                            <a href="blog.html">Tình trạng</a>
+                            <a>Tình trạng</a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="blog.html">Đang đấu giá</a>
+                                    <a href="product-page.html">Đang đấu giá</a>
                                 </li>
                                 <li>
-                                    <a href="blog-details.html">Đã lên sàng</a>
+                                    <a href="product-page.html">Đã lên sàng</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="blog.html">Chính sách</a>
+                            <a>Chính sách</a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="blog.html">Chính sách đấu giá</a>
+                                    <a href="#">Chính sách đấu giá</a>
                                 </li>
                                 <li>
-                                    <a href="blog-details.html">Chính sách giao hàng</a>
+                                    <a href="#">Chính sách giao hàng</a>
                                 </li>
                             </ul>
                         </li>
@@ -165,42 +165,42 @@
                             <a href="index.html">TRANG CHỦ</a>
                         </li>
                         <li>
-                            <a href="shop.html">LOẠI</a>
+                            <a>LOẠI</a>
                             <ul>
                                 <li>
-                                    <a href="#">CÁC LOẠI</a>
+                                    <a href="product-page.html">CÁC LOẠI</a>
                                     <ul>
                                         <li>
-                                            <a href="#">CÁC LOẠI</a>
+                                            <a href="product-page.html">CÁC LOẠI</a>
                                         </li>
                                         <li>
-                                            <a href="#">Xe cộ</a>
+                                            <a href="product-page.html">Xe cộ</a>
                                         </li>
                                         <li>
-                                            <a href="#">Đồ nội thất</a>
+                                            <a href="product-page.html">Đồ nội thất</a>
                                         </li>
                                         <li>
-                                            <a href="#">Đồ điện tử</a>
+                                            <a href="product-page.html">Đồ điện tử</a>
                                         </li>
                                         <li>
-                                            <a href="#">Thời trang</a>
+                                            <a href="product-page.html">Thời trang</a>
                                         </li>
                                         <li>
-                                            <a href="#">Giày</a>
+                                            <a href="product-page.html">Giày</a>
                                         </li>
                                         <li>
-                                            <a href="#">Đồ cổ</a>
+                                            <a href="product-page.html">Đồ cổ</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#">Tìm theo</a>
+                                    <a>Tìm theo</a>
                                     <ul>
                                         <li>
-                                            <a href="#">Tên</a>
+                                            <a href="product-page.html">Tên</a>
                                         </li>
                                         <li>
-                                            <a href="#">Thời gian</a>
+                                            <a href="product-page.html">Thời gian</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -210,10 +210,10 @@
                             <a>Chính sách</a>
                             <ul>
                                 <li>
-                                    <a href="checkout.html">Chính sách đấu giá</a>
+                                    <a href="#">Chính sách đấu giá</a>
                                 </li>
                                 <li>
-                                    <a href="wishlist.html">Chính sách giao hàng</a>
+                                    <a href="#">Chính sách giao hàng</a>
                                 </li>
                             </ul>
                         </li>
