Update page Add

--- a/Source Web Design/auction-page.html
+++ b/Source Web Design/auction-page.html
@@ -262,14 +262,14 @@
                         <p>Node.js là một hệ thống phần mềm được thiết kế để viết các ứng dụng internet có khả năng mở rộng, đặc biệt là máy chủ web.[1] Chương trình được viết bằng JavaScript, sử dụng kỹ thuật điều khiển theo sự kiện, nhập/xuất không đồng bộ để tối tiểu tổng chi phí và tối đại khả năng mở rộng.[2] Node.js bao gồm có V8 JavaScript engine của Google, libUV, và vài thư viện khác. Node.js được tạo bởi Ryan Dahl từ năm 2009, và phát triển dưới sự bảo trợ của Joyent.</p>
                         <div class="single-pro-size-1">
                             <h5>Tăng hơn so với giá hiện tại (nghìn)</h5>
-                            </br>
+                            <br>
                             <div class="pro-qty float-left">
                                 <input value="0" name="qtybutton" class="cart-plus-minus-box" type="text">
                             </div>
                         </div>
                         <div class="single-product-action-quantity fix">
                             <div class="pro-details-action float-left">
-                                <button class="pro-details-act-btn btn-text active"><i class="zmdi zmdi-case"></i>Đấu giá</button>
+                                <a href="check-out.html"><button class="pro-details-act-btn btn-text active"><i class="zmdi zmdi-case"></i>Đấu giá</button></a>
                             </div>
                         </div>
                     </div>
