--- a/Source Web Design/check-out.html
+++ b/Source Web Design/check-out.html
@@ -52,11 +52,16 @@
                     <div class="billing-details">
                         <h4>Xác nhận thông tin giao dịch</h4>
                         <form action="#">
-                            <input type="text" placeholder="Nguyễn Văn A" />
-                            <input type="text" placeholder="12 Nguyễn Văn Bảo, phường 4, Gò Vấp, HCM" />
-                            <input type="text" placeholder="083.787.0602" />
-                            <input type="text" placeholder="october15th98@gmail.com" />
-                            <textarea placeholder="Ghi chú"></textarea>
+                            <label for="">Họ và tên:</label>
+                            <input type="text"/>
+                            <label for="">Địa chỉ:</label>
+                            <input type="text"/>
+                            <label for="">Số điện thoại:</label>
+                            <input type="text"/>
+                            <label for="">Email:</label>
+                            <input type="text"/>
+                            <label for="">Ghi chú:</label>
+                            <textarea></textarea>
                         </form>
                     </div>
                 </div>
