--- a/Source Web Design/quanlyloaisanpham.html
+++ b/Source Web Design/quanlyloaisanpham.html
@@ -25,6 +25,9 @@
 <!-- Responsive CSS -->
 <link rel="stylesheet" href="css/responsive.css">
 <link href="css/color/color-1.css" rel="stylesheet">
+<link rel="stylesheet" href="css/addNews.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 
 <!-- Modernizer JS -->
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -122,6 +125,31 @@
     <div class="cart-area pb-90 pt-90 mt-100">
         <div class="container">
             <div class="row">
+                <div class="procced-checkout col-md-12 col-xs-12">
+                    <button class="btn btn-open checkout-link">
+                    <span>Thêm loại sản phẩm</span></button>
+                </div>
+                <section class="modal">
+                    <div class="wrapper">
+                        <div class="container">
+                            <span class="icon-close"></span>
+                            <div class="right">
+                                <div class="form">
+                                    <h2 class="title">Thêm loại sản phẩm</h2>
+                                    <form>
+                                        <div class="input-wrapper">
+                                            <label for="">Nhập tên loại:</label>
+                                            <input id="name" type="text" placeholder="Name">
+                                        </div>
+                                    </form>
+                                    <button class="btn"><span>Xác nhận</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="row" style="margin-top: 20px;">
                 <div class="col-xs-12">
                     <div class="cart-table table-responsive mb-50">
                         <table class="table">
@@ -173,11 +201,6 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="procced-checkout col-md-12 col-xs-12">
-                    <a href="#" class="checkout-link">Thêm loại sản phẩm</a>
                 </div>
             </div>
         </div>
@@ -257,5 +280,8 @@
 <!-- Main JS
 ============================================ -->
 <script src="js/main.js"></script>
+<script src="js/addNews.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 </body>
 </html>
