--- a/Source Web Design/quanlysanpham.html
+++ b/Source Web Design/quanlysanpham.html
@@ -15,7 +15,8 @@
 
 <!-- CSS -->
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css'>
 <!-- Icon Font CSS-->
 <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 <!-- Plugins Import CSS -->
@@ -25,7 +26,9 @@
 <!-- Responsive CSS -->
 <link rel="stylesheet" href="css/responsive.css">
 <link href="css/color/color-1.css" rel="stylesheet">
-
+<link rel="stylesheet" href="css/addNews.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 <!-- Modernizer JS -->
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -122,6 +125,66 @@
     <div class="cart-area pb-90 pt-90 mt-100">
         <div class="container">
             <div class="row">
+                <div class="procced-checkout col-md-12 col-xs-12">
+                <button class="btn btn-open checkout-link">
+                <span>Thêm sản phẩm đấu giá</span></button>
+                </div>
+                <section class="modal">
+                    <div class="wrapper">
+                        <div class="container">
+                            <span class="icon-close"></span>
+                            <div class="right">
+                                <div class="form">
+                                    <h2 class="title">Thêm sản phẩm đấu giá</h2>
+                                    <form>
+                                    <div class="input-wrapper">
+                                        <label for="">Nhập tên sản phẩm:</label>
+                                        <input id="name" type="text" placeholder="Name">
+                                    </div>
+                                    <div class="input-wrapper">
+                                        <label for="">Chọn loại sản phẩm:</label>
+                                        <select name="cards">
+                                            <option value="">Điện tử</option>
+                                            <option value="">Đồ cổ</option>
+                                            <option value="">Xe</option>
+                                        </select>
+                                    </div>
+                                    <div class="input-wrapper">
+                                        <label for="">Nhập mô tả:</label>
+                                        <input id="mota" type="text" placeholder="Mô tả">
+                                    </div>
+                                    <div class="input-wrapper">
+                                        <label for="">Chọn hình ảnh:</label>
+                                        <input id="image" type="file" placeholder="Image">
+                                    </div>
+                                    <div class="input-wrapper">
+                                        <label for="">Nhập giá:</label>
+                                        <input id="gia" type="text" placeholder="Giá">
+                                    </div>
+                                    <div class="input-wrapper">
+                                        <label for="">Thời gian khởi động đấu giá:</label>
+                                        <div class="form-group">
+                                            <div class="input-group date" id="datetimepicker1">
+                                                <input type="text" class="form-control"/>
+                                                <span class="input-group-addon">
+                                                    <span class="">Chọn ngày</span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="input-wrapper">
+                                        <label for="">Hạn cho mỗi lượt:</label>
+                                        <input id="due" type="text" placeholder="Giây">
+                                    </div>
+                                    </form>
+                                    <button class="btn"><span>Xác nhận</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="row" style="margin-top: 20px;">
                 <div class="col-xs-12">
                     <div class="cart-table table-responsive mb-50">
                         <table class="table text-center">
@@ -205,11 +268,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="procced-checkout col-md-12 col-xs-12">
-                    <a href="#" class="checkout-link">Thêm sản phẩm</a>
-                </div>
-            </div>
         </div>
     </div>
     <!--Footer-->
@@ -274,7 +332,10 @@
 
 <!-- jQuery JS
 ============================================ -->
-<script src="js/vendor/jquery-1.12.0.min.js"></script>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js'></script>
+<script src='https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/src/js/bootstrap-datetimepicker.js'></script>
 <!-- Bootstrap JS
 ============================================ -->
 <script src="js/bootstrap.min.js"></script>
@@ -287,5 +348,14 @@
 <!-- Main JS
 ============================================ -->
 <script src="js/main.js"></script>
+<script src="js/addNews.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<script>
+    $(function () {
+		$('#datetimepicker1').datetimepicker({
+			format: 'DD-MM-YYYY LT'
+		});
+	});</script>
 </body>
 </html>
